@@ -204,6 +204,7 @@ Views 6.x-3.0-dev
     o by dereine: Add a test for field math, and fix the field math :)
     o by dereine: Add a test for filter equality.
     o by dereine: Add a test for field counter.
+    o #1007730 by bojanz, merlinofchaos, dereine: Add tests for views_handler_filter_string.
 
 Views 6.x-3.0-alpha3
     o #705668 by dereine: Fix glossary view, add tests for glossary view.
